<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distance"
        android:layout_margin="16dp"
        android:inputType="numberDecimal"
        android:id="@+id/edit_distance"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_km"
        android:gravity="center"
        tools:ignore="HardcodedText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:inputType="numberDecimal"
        android:id="@+id/edit_price"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_per_liter"
        android:gravity="center"
        android:layout_marginTop="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autonomy"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:inputType="numberDecimal"
        android:id="@+id/edit_autonomy"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kms_per_liter"
        android:gravity="center"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_spend"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_value"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:textColor="@color/blue"
        android:id="@+id/text_total_value"/>

    <Button
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_calculate"
        android:text="@string/button_calculate"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:backgroundTint="@color/green"/>


</LinearLayout>